tests/parsing/invalid/symbol_defined_twice_in_element/bus.fbd
type my_bus bus
	const a = 10

	type a mask
		width = 6
